tests/miniJava/neg/004367_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public Main java ( ) { return 0 ; } }
